--- a/all/themes/pixelgarage/less/pxlComponents/pxlComponents.less
+++ b/all/themes/pixelgarage/less/pxlComponents/pxlComponents.less
@@ -31,6 +31,7 @@
 @import "node-facebook";
 @import "node-instagram";
 @import "node-remoteform";
+@import "node-footer";
 
 // views
 @import "view-banners";
@@ -43,6 +44,7 @@
 @import "view-course-tabs";
 @import "view-course-times";
 @import "view-team";
+@import "view-news";
 @import "view-bildungsnavigator";
 @import "view-testimonials";
 
