--- a/all/themes/pixelgarage/less/footer.less
+++ b/all/themes/pixelgarage/less/footer.less
@@ -8,252 +8,13 @@
 
 // Mixins
 // -------------------------
-//
-// Newsletter form
-// ---------------
-.inline-webform() {
-  text-align: center;
-
-  @media @tablet {
-    text-align: left;
-  }
-
-  .webform-component {
-    display: block;
-    margin: 0 auto 20px;
-    padding: 0;
-    width: 80%;
-    background-color: rgba(0,0,0,0);
-
-    .control-label {
-      display: none;
-    }
-
-    input.form-text {
-      padding: 10px;
-      height: 36px;
-      font-family: @pxl-text-font-light;
-      font-size: 16px;
-      //line-height: 1;
-      text-align: left;
-      color: @pxl-color-gray-text;
-      box-shadow: none;
-      #pxl-mixins.border-radius(4px);
-      border: none;
-      background-color: @webform-bg-color-input;
-    }
-    input:focus {
-      .box-shadow(inset 0 0 0.3em @text-color);
-    }
-  }
-
-  div.form-actions {
-    display: block;
-    margin: 0 auto;
-    padding: 0;
-    text-align: center;
-
-    button.webform-submit {
-      display: inline-block;
-      margin: 0;
-      padding: 10px 20px;
-      height: 36px;
-      font-family: @pxl-text-font;
-      font-size: 16px;
-      //line-height: 1;
-      letter-spacing: 1.5px;
-      text-transform: capitalize;
-      color: #eee;
-      outline: none;
-      #pxl-mixins.border-radius(4px);
-      border: none;
-      background-color: @pxl-color-gray-text;
-
-      &:hover, &:focus {
-        color: @pxl-color-gray-text;
-        border: none;
-        background: #eee;
-      }
-    }
-  }
-
-  @media @narrow {
-    .webform-component {
-      display: inline-block;
-      vertical-align: top;
-      margin: 0 -3px;
-      width: 60%;
-
-      input.form-text {
-        .border-right-radius(0);
-      }
-    }
-
-    div.form-actions {
-      display: inline-block;
-      vertical-align: top;
-      margin: 0 -3px;
-      width: 40%;
-      max-width: 140px;
-      text-align: left;
-
-      button.webform-submit {
-        .border-left-radius(0);
-      }
-    }
-  }
-}
-
-
 
 
 // Main settings
 // -------------------------
-.footer {
+footer.footer {
   margin: 0;
   padding: 0;
   border: none;
   background-color: @pxl-color-gray-dark;
-
-  .container {
-    .region-footer {
-      .block-nodeblock {
-        // footer node block
-        .node-footer.view-mode-full {
-          padding: 0 0 20px;
-
-          .row {
-            .col-sm-6 {
-              .field {
-                .block-title {
-                  margin: 30px 0;
-                  font-family: @pxl-text-font-medium;
-                  font-size: 16px;
-                  line-height: 1;
-                  letter-spacing: 1.2px;
-                  text-transform: capitalize;
-                  text-align: center;
-                  color: #fff;
-
-                  @media @tablet {
-                    text-align: left;
-                  }
-                }
-              }
-
-              .field-name-locations {
-                // see view-locations
-              }
-
-              .field-name-newsletter {
-                form#webform-client-form-1301 {
-                  .inline-webform;
-                }
-              }
-
-              .field-name-follow-site {
-                // see block-socials
-              }
-
-              .field-name-footer-menu {
-                ul.menu {
-                  li {
-                    display: block;
-                    height: 40px;
-
-                    a {
-                      padding: 0 0 2px;
-                      font-family: @pxl-text-font;
-                      font-size: 16px;
-                      color: @pxl-color-gray-text;
-                      text-align: center;
-                      background: none;
-
-                      &:hover,
-                      &.active {
-                        color: #fff;
-                        //text-decoration: underline;
-                        background: none;
-                      }
-
-                      @media @tablet {
-                        text-align: left;
-                      }
-                    }
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
-    }
-  }
-}
-
-.subfooter {
-  .container {
-    .region-subfooter {
-      .block-nodeblock {
-        // subfooter node block
-        .node-footer.view-mode-subfooter {
-          .row {
-            .col-sm-6 {
-              .field-name-copyright {
-                // copyright node block
-                .field-name-body {
-                  .field-item {
-                    margin: 10px 0 0;
-                    font-family: @pxl-text-font;
-                    font-size: 14px;
-                    color: @text-color;
-                    line-height: 1;
-
-                    div {
-                      a {
-                        display: inline-block;
-                        padding: 10px 0 10px 5px;
-
-                        img {
-                          max-width: 100%;
-                          height: auto;
-                        }
-                      }
-                    }
-
-                  }
-                }
-              }
-
-              .field-name-certificates {
-                display: block;
-                text-align: left;
-
-                @media @tablet {
-                  text-align: right;
-                }
-
-                // node block
-                .field-name-body {
-                  .field-item {
-                    a {
-                      display: inline-block;
-
-                      img {
-                        margin: 10px !important;
-                        max-height: 60px;
-                        max-width: 120px;
-                        width: auto;
-                      }
-                    }
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
-    }
-  }
-
 }
