--- a/all/themes/pixelgarage/less/pxlComponents/pxlComponents.less
+++ b/all/themes/pixelgarage/less/pxlComponents/pxlComponents.less
@@ -22,6 +22,7 @@
 @import "node-course";
 @import "node-location";
 @import "node-call2action";
+@import "node-benefit";
 @import "user-profile";
 @import "node-brochure";
 @import "node-news";
@@ -45,6 +46,7 @@
 @import "view-course-times";
 @import "view-team";
 @import "view-news";
+@import "view-benefits";
 @import "view-bildungsnavigator";
 @import "view-testimonials";
 
