--- a/all/themes/pixelgarage/less/pxlComponents/view-courses.less
+++ b/all/themes/pixelgarage/less/pxlComponents/view-courses.less
@@ -15,7 +15,7 @@
 // -------------------------
 .view.view-courses {
   .view-content {
-    margin: 50px 0;
+    margin: 20px 0;
 
     .panel-group {
       margin: 0;
@@ -58,152 +58,167 @@
         line-height: 1.4;
       }
 
-      .course-subject {
-        // fachgebiet title
-        h2 {
-          margin: 15px 0 0;
-          padding: 20px 0 24px;
-          font-family: @pxl-text-font-medium;
-          font-size: @font-size-base + 2;
-          color: @text-color;
-          line-height: 1;
-          border-top: 1px solid @pxl-border-color;
+      .course-block {
+        display: inline-block;
+        margin: 0 -2px;
+        padding: 0 10px;
+        width: 100%;
+        vertical-align: top;
+
+        @media @tablet {
+          width: 50%;
         }
-      }
+        @media @normal {
+          width: 33.3333333%;
+        }
 
-      .panel {
-        margin: 0;
-        border: none;
-        background: transparent none;
-        #pxl-mixins.box-shadow(none);
-
-        .panel-heading {
-          position: relative;
-          margin-bottom: 0;
-          padding: 0;
-          font-family: @pxl-text-font-light;
-          line-height: 1;
-          #pxl-mixins.border-radius(0);
-          background: none;
-
-          .panel-title {
-            display: inline-block;
-            width: 100%;
-
-            a {
-              display: block;
-              width: 100%;
-              padding: 9px 10px 11px;
-              font-size: 14px;
-              color: @text-color;
-              text-decoration: none;
-            }
+        .course-subject {
+          // fachgebiet title
+          h2 {
+            margin: 30px 0 0;
+            padding: 20px 0 24px;
+            font-family: @pxl-text-font-medium;
+            font-size: @font-size-base + 2;
+            color: @text-color;
+            line-height: 1;
+            border-top: 1px solid @pxl-border-color;
           }
+        }
 
-          .short-description {
-            // in Kürze
-            display: none;
-            position: absolute;
-            top: 0;
-            right: 25px;
+        .panel {
+          margin: 0;
+          border: none;
+          background: transparent none;
+          #pxl-mixins.box-shadow(none);
+
+          .panel-heading {
+            position: relative;
+            margin-bottom: 0;
             padding: 0;
+            font-family: @pxl-text-font-light;
+            line-height: 1;
+            #pxl-mixins.border-radius(0);
+            background: none;
 
-            a {
-              display: inline-block;
-              padding: 9px 10px 11px;
-              font-size: 14px;
-              color: #fff;
-              text-decoration: none;
-            }
-
-            .fa {
-              // caret-down
-              color: #fff;
-            }
-          }
-
-          @media @narrow {
-            .panel-title,
-            .short-description {
-              a {
-                padding: 9px 10px 10px;
-                font-size: 15px;
-              }
-            }
-
-          }
-
-          @media @tablet {
-            .panel-title,
-            .short-description {
-              display: inline-block;
-
-              a {
-                padding: 7px 10px 9px;
-                font-size: 18px;
-              }
-            }
-          }
-
-          &:hover {
             .panel-title {
+              display: inline-block;
+              width: 100%;
+
               a {
+                display: block;
+                width: 100%;
+                padding: 9px 10px 11px;
+                font-size: 14px;
+                color: @text-color;
+                text-decoration: none;
+              }
+            }
+
+            .short-description {
+              // in Kürze
+              display: none;
+              position: absolute;
+              top: 0;
+              right: 25px;
+              padding: 0;
+
+              a {
+                display: inline-block;
+                padding: 9px 10px 11px;
+                font-size: 14px;
+                color: #fff;
+                text-decoration: none;
+              }
+
+              .fa {
+                // caret-down
                 color: #fff;
               }
             }
-          }
-          body.segment_kv &:hover {
-            background-color: @pxl-color-hso-kv;
-          }
-          body.segment_hs &:hover {
-            background-color: @pxl-color-hso-hs;
-          }
-          body.segment_wm &:hover {
-            background-color: @pxl-color-hso-wm;
-          }
-          body.segment_sp &:hover {
-            background-color: @pxl-color-hso-sp;
-          }
-          body.segment_wi &:hover {
-            background-color: @pxl-color-hso-wi;
-          }
-          body.segment_pp &:hover {
-            background-color: @pxl-color-hso-pp;
+
+            @media @narrow {
+              .panel-title,
+              .short-description {
+                a {
+                  padding: 9px 10px 10px;
+                  font-size: 15px;
+                }
+              }
+
+            }
+
+            @media @tablet {
+              .panel-title,
+              .short-description {
+                display: inline-block;
+
+                a {
+                  padding: 7px 10px 9px;
+                  font-size: 18px;
+                }
+              }
+            }
+
+            &:hover {
+              .panel-title {
+                a {
+                  color: #fff;
+                }
+              }
+            }
+            body.segment_kv &:hover {
+              background-color: @pxl-color-hso-kv;
+            }
+            body.segment_hs &:hover {
+              background-color: @pxl-color-hso-hs;
+            }
+            body.segment_wm &:hover {
+              background-color: @pxl-color-hso-wm;
+            }
+            body.segment_sp &:hover {
+              background-color: @pxl-color-hso-sp;
+            }
+            body.segment_wi &:hover {
+              background-color: @pxl-color-hso-wi;
+            }
+            body.segment_pp &:hover {
+              background-color: @pxl-color-hso-pp;
+            }
+
           }
 
-        }
+          .panel-collapse {
+            .panel-body {
+              margin: 10px 0;
+              padding: 10px 10px 20px;
+              font-family: @pxl-text-font-light;
+              color: @text-color-light;
+              border: none;
 
-        .panel-collapse {
-          .panel-body {
-            margin: 10px 0;
-            padding: 10px 10px 20px;
-            font-family: @pxl-text-font-light;
-            color: @text-color-light;
-            border: none;
-
-            body.segment_kv & {
-              border-top: 1px solid @pxl-color-hso-kv;
-              border-bottom: 1px solid @pxl-color-hso-kv;
-            }
-            body.segment_hs & {
-              border-top: 1px solid @pxl-color-hso-hs;
-              border-bottom: 1px solid @pxl-color-hso-hs;
-            }
-            body.segment_wm & {
-              border-top: 1px solid @pxl-color-hso-wm;
-              border-bottom: 1px solid @pxl-color-hso-wm;
-            }
-            body.segment_sp & {
-              border-top: 1px solid @pxl-color-hso-sp;
-              border-bottom: 1px solid @pxl-color-hso-sp;
-            }
-            body.segment_wi & {
-              border-top: 1px solid @pxl-color-hso-wi;
-              border-bottom: 1px solid @pxl-color-hso-wi;
-            }
-            body.segment_pp & {
-              border-top: 1px solid @pxl-color-hso-pp;
-              border-bottom: 1px solid @pxl-color-hso-pp;
+              body.segment_kv & {
+                border-top: 1px solid @pxl-color-hso-kv;
+                border-bottom: 1px solid @pxl-color-hso-kv;
+              }
+              body.segment_hs & {
+                border-top: 1px solid @pxl-color-hso-hs;
+                border-bottom: 1px solid @pxl-color-hso-hs;
+              }
+              body.segment_wm & {
+                border-top: 1px solid @pxl-color-hso-wm;
+                border-bottom: 1px solid @pxl-color-hso-wm;
+              }
+              body.segment_sp & {
+                border-top: 1px solid @pxl-color-hso-sp;
+                border-bottom: 1px solid @pxl-color-hso-sp;
+              }
+              body.segment_wi & {
+                border-top: 1px solid @pxl-color-hso-wi;
+                border-bottom: 1px solid @pxl-color-hso-wi;
+              }
+              body.segment_pp & {
+                border-top: 1px solid @pxl-color-hso-pp;
+                border-bottom: 1px solid @pxl-color-hso-pp;
+              }
             }
           }
         }
