--- a/all/themes/pixelgarage/less/content.less
+++ b/all/themes/pixelgarage/less/content.less
@@ -42,7 +42,7 @@ body {
   position: relative;
   height: 100%;
   min-height: 320px;
-  background: @pxl-color-hso-sec none;
+  background: white none;
   // sharper fonts
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
