--- a/all/themes/pixelgarage/less/pxlComponents/view-call2action.less
+++ b/all/themes/pixelgarage/less/pxlComponents/view-call2action.less
@@ -48,6 +48,7 @@
 // Call2action as Menu links
 //
 .view.view-call2action.view-display-id-block_1 {
+  overflow: hidden;
   width: 100%;
   margin: 0;
 
@@ -65,7 +66,7 @@
         width: 33.3333333%;
       }
       @media @normal {
-        width: 16.666667%;
+        width: 16.6666667%;
         padding: 0;
       }
     }
