--- a/all/themes/pixelgarage/less/pxlComponents/view-locations.less
+++ b/all/themes/pixelgarage/less/pxlComponents/view-locations.less
@@ -178,7 +178,7 @@
 
                 a {
                   display: block;
-                  text-align: left;
+                  text-align: center;
 
                   img {
                     display: inline-block;
