--- a/all/themes/pixelgarage/css/style.css
+++ b/all/themes/pixelgarage/css/style.css
@@ -17755,12 +17755,12 @@ body.segment_pp .view.view-course-times-search .view-filters .views-exposed-form
   padding: 0;
   border: none;
 }
-.view.view-course-times .view-content .tab-content .tab-pane .panel-group table,
-.view.view-course-times-search .view-content .tab-content .tab-pane .panel-group table {
+.view.view-course-times .view-content table,
+.view.view-course-times-search .view-content table {
   width: 100%;
 }
-.view.view-course-times .view-content .tab-content .tab-pane .panel-group table caption,
-.view.view-course-times-search .view-content .tab-content .tab-pane .panel-group table caption {
+.view.view-course-times .view-content table caption,
+.view.view-course-times-search .view-content table caption {
   display: none;
   margin: 15px 0 0;
   padding: 20px 20px 24px;
@@ -17769,48 +17769,48 @@ body.segment_pp .view.view-course-times-search .view-filters .views-exposed-form
   color: #333333;
   line-height: 1;
 }
-.view.view-course-times .view-content .tab-content .tab-pane .panel-group table thead tr th,
-.view.view-course-times-search .view-content .tab-content .tab-pane .panel-group table thead tr th {
+.view.view-course-times .view-content table thead tr th,
+.view.view-course-times-search .view-content table thead tr th {
   position: relative;
   padding: 5px 5px 10px;
   font-family: 'SohoGothicProMedium', serif;
   font-size: 15px;
   border: none;
 }
-.view.view-course-times .view-content .tab-content .tab-pane .panel-group table thead tr th.active,
-.view.view-course-times-search .view-content .tab-content .tab-pane .panel-group table thead tr th.active {
+.view.view-course-times .view-content table thead tr th.active,
+.view.view-course-times-search .view-content table thead tr th.active {
   background: none;
 }
-.view.view-course-times .view-content .tab-content .tab-pane .panel-group table thead tr th a,
-.view.view-course-times-search .view-content .tab-content .tab-pane .panel-group table thead tr th a {
+.view.view-course-times .view-content table thead tr th a,
+.view.view-course-times-search .view-content table thead tr th a {
   color: #333333;
 }
-.view.view-course-times .view-content .tab-content .tab-pane .panel-group table thead tr th a:hover,
-.view.view-course-times-search .view-content .tab-content .tab-pane .panel-group table thead tr th a:hover {
+.view.view-course-times .view-content table thead tr th a:hover,
+.view.view-course-times-search .view-content table thead tr th a:hover {
   color: #494a4f;
 }
-.view.view-course-times .view-content .tab-content .tab-pane .panel-group table thead tr th a img,
-.view.view-course-times-search .view-content .tab-content .tab-pane .panel-group table thead tr th a img {
+.view.view-course-times .view-content table thead tr th a img,
+.view.view-course-times-search .view-content table thead tr th a img {
   display: inline-block;
   position: absolute;
   right: 10px;
 }
-.view.view-course-times .view-content .tab-content .tab-pane .panel-group table tbody tr,
-.view.view-course-times-search .view-content .tab-content .tab-pane .panel-group table tbody tr {
+.view.view-course-times .view-content table tbody tr,
+.view.view-course-times-search .view-content table tbody tr {
   padding: 0;
   border: none;
   height: 70px;
 }
-.view.view-course-times .view-content .tab-content .tab-pane .panel-group table tbody tr.even,
-.view.view-course-times-search .view-content .tab-content .tab-pane .panel-group table tbody tr.even {
+.view.view-course-times .view-content table tbody tr.even,
+.view.view-course-times-search .view-content table tbody tr.even {
   background-color: #fff;
 }
-.view.view-course-times .view-content .tab-content .tab-pane .panel-group table tbody tr.odd,
-.view.view-course-times-search .view-content .tab-content .tab-pane .panel-group table tbody tr.odd {
+.view.view-course-times .view-content table tbody tr.odd,
+.view.view-course-times-search .view-content table tbody tr.odd {
   background-color: #ebebeb;
 }
-.view.view-course-times .view-content .tab-content .tab-pane .panel-group table tbody tr td,
-.view.view-course-times-search .view-content .tab-content .tab-pane .panel-group table tbody tr td {
+.view.view-course-times .view-content table tbody tr td,
+.view.view-course-times-search .view-content table tbody tr td {
   padding: 8px;
   vertical-align: middle;
   font-family: 'SohoGothicProLight', serif;
@@ -17818,34 +17818,39 @@ body.segment_pp .view.view-course-times-search .view-filters .views-exposed-form
   color: #333333;
   border: none;
 }
-.view.view-course-times .view-content .tab-content .tab-pane .panel-group table tbody tr td a,
-.view.view-course-times-search .view-content .tab-content .tab-pane .panel-group table tbody tr td a {
+.view.view-course-times .view-content table tbody tr td a,
+.view.view-course-times-search .view-content table tbody tr td a {
   color: #333333;
 }
-.view.view-course-times .view-content .tab-content .tab-pane .panel-group table tbody tr td.active,
-.view.view-course-times-search .view-content .tab-content .tab-pane .panel-group table tbody tr td.active {
+.view.view-course-times .view-content table tbody tr td.active,
+.view.view-course-times-search .view-content table tbody tr td.active {
   background: none;
 }
-.view.view-course-times .view-content .tab-content .tab-pane .panel-group table tbody tr td.views-field-field-course-date,
-.view.view-course-times-search .view-content .tab-content .tab-pane .panel-group table tbody tr td.views-field-field-course-date {
+.view.view-course-times .view-content table tbody tr td.views-field-field-course,
+.view.view-course-times-search .view-content table tbody tr td.views-field-field-course {
+  width: 20%;
+  min-width: 130px;
+}
+.view.view-course-times .view-content table tbody tr td.views-field-field-course-date,
+.view.view-course-times-search .view-content table tbody tr td.views-field-field-course-date {
   white-space: nowrap;
   line-height: 25px;
 }
-.view.view-course-times .view-content .tab-content .tab-pane .panel-group table tbody tr td.views-field-body,
-.view.view-course-times-search .view-content .tab-content .tab-pane .panel-group table tbody tr td.views-field-body {
+.view.view-course-times .view-content table tbody tr td.views-field-body,
+.view.view-course-times-search .view-content table tbody tr td.views-field-body {
   width: 30%;
   min-width: 130px;
 }
-.view.view-course-times .view-content .tab-content .tab-pane .panel-group table tbody tr td.views-field-body p,
-.view.view-course-times-search .view-content .tab-content .tab-pane .panel-group table tbody tr td.views-field-body p {
+.view.view-course-times .view-content table tbody tr td.views-field-body p,
+.view.view-course-times-search .view-content table tbody tr td.views-field-body p {
   font-size: 15px;
 }
-.view.view-course-times .view-content .tab-content .tab-pane .panel-group table tbody tr td.views-field-nothing,
-.view.view-course-times-search .view-content .tab-content .tab-pane .panel-group table tbody tr td.views-field-nothing {
+.view.view-course-times .view-content table tbody tr td.views-field-nothing,
+.view.view-course-times-search .view-content table tbody tr td.views-field-nothing {
   text-align: left;
 }
-.view.view-course-times .view-content .tab-content .tab-pane .panel-group table tbody tr td.views-field-nothing a,
-.view.view-course-times-search .view-content .tab-content .tab-pane .panel-group table tbody tr td.views-field-nothing a {
+.view.view-course-times .view-content table tbody tr td.views-field-nothing a,
+.view.view-course-times-search .view-content table tbody tr td.views-field-nothing a {
   display: block;
   margin: 0 10px 0 0;
   padding: 8px 0 10px;
@@ -17866,8 +17871,8 @@ body.segment_pp .view.view-course-times-search .view-filters .views-exposed-form
   background: #ff535d;
   display: inline-block;
 }
-.view.view-course-times .view-content .tab-content .tab-pane .panel-group table tbody tr td.views-field-nothing a:hover,
-.view.view-course-times-search .view-content .tab-content .tab-pane .panel-group table tbody tr td.views-field-nothing a:hover {
+.view.view-course-times .view-content table tbody tr td.views-field-nothing a:hover,
+.view.view-course-times-search .view-content table tbody tr td.views-field-nothing a:hover {
   background: #ff757d;
 }
 .view.view-course-times .text-center ul.pagination,
@@ -17907,6 +17912,10 @@ body.segment_pp .view.view-course-times-search .view-filters .views-exposed-form
 }
 .view.view-course-times-search .view-content .table-responsive {
   border: 1px solid #c9c9c9;
+}
+.view.view-course-times-search .view-content .table-responsive tbody tr td.views-field-body {
+  width: 20%;
+  min-width: 130px;
 }
 /*
  *  View team component
