--- a/all/themes/pixelgarage/less/mixins/text.less
+++ b/all/themes/pixelgarage/less/mixins/text.less
@@ -116,6 +116,8 @@
 
     table, tr, th, td {
       border-color: @pxl-border-color;
+
+      // see also wysiwyg-templates.less
     }
 
     strong {
