--- a/all/modules/_pixelstructure/pixel_structure/pages/course_anmeldung.page
+++ b/all/modules/_pixelstructure/pixel_structure/pages/course_anmeldung.page
@@ -29,7 +29,7 @@ $handler->name = 'page_course_anmeldung_panel_context';
 $handler->task = 'page';
 $handler->subtask = 'course_anmeldung';
 $handler->handler = 'panel_context';
-$handler->weight = -30;
+$handler->weight = -3;
 $handler->conf = array(
   'title' => 'Default Template',
   'no_blocks' => 0,
@@ -194,7 +194,7 @@ $handler->name = 'page_course_anmeldung_panel_context_3';
 $handler->task = 'page';
 $handler->subtask = 'course_anmeldung';
 $handler->handler = 'panel_context';
-$handler->weight = -28;
+$handler->weight = -2;
 $handler->conf = array(
   'title' => 'ECDL Template',
   'no_blocks' => 0,
@@ -350,11 +350,173 @@ $page->default_handlers[$handler->name] = $handler;
 $handler = new stdClass();
 $handler->disabled = FALSE; /* Edit this to true to make a default handler disabled initially */
 $handler->api_version = 1;
+$handler->name = 'page_course_anmeldung__telc-template';
+$handler->task = 'page';
+$handler->subtask = 'course_anmeldung';
+$handler->handler = 'panel_context';
+$handler->weight = -1;
+$handler->conf = array(
+  'title' => 'TELC Template',
+  'no_blocks' => 0,
+  'pipeline' => 'standard',
+  'body_classes_to_remove' => '',
+  'body_classes_to_add' => '',
+  'css_id' => '',
+  'css' => '',
+  'contexts' => array(),
+  'relationships' => array(
+    1 => array(
+      'identifier' => 'Course',
+      'keyword' => 'course',
+      'name' => 'entity_from_field:field_course-node-node',
+      'delta' => 0,
+      'context' => 'argument_entity_id:node_1',
+      'id' => 1,
+    ),
+    2 => array(
+      'identifier' => 'Location',
+      'keyword' => 'location',
+      'name' => 'entity_from_field:field_location-node-node',
+      'delta' => 0,
+      'context' => 'argument_entity_id:node_1',
+      'id' => 1,
+    ),
+    3 => array(
+      'identifier' => 'Segment',
+      'keyword' => 'segment',
+      'name' => 'entity_from_field:field_segment-node-taxonomy_term',
+      'delta' => 0,
+      'context' => 'relationship_entity_from_field:field_course-node-node_1',
+      'id' => 1,
+    ),
+  ),
+  'access' => array(
+    'plugins' => array(
+      0 => array(
+        'name' => 'node_type',
+        'settings' => array(
+          'type' => array(
+            'course_times' => 'course_times',
+          ),
+        ),
+        'context' => 'argument_entity_id:node_1',
+        'not' => FALSE,
+      ),
+      1 => array(
+        'name' => 'node_status',
+        'settings' => NULL,
+        'context' => 'argument_entity_id:node_1',
+        'not' => FALSE,
+      ),
+      2 => array(
+        'name' => 'entity_field_value:node:course_times:field_template',
+        'settings' => array(
+          'field_template' => array(
+            'und' => array(
+              0 => array(
+                'value' => 'telc',
+              ),
+            ),
+          ),
+          'field_template_value' => array(
+            0 => 'telc',
+          ),
+        ),
+        'context' => 'argument_entity_id:node_1',
+        'not' => FALSE,
+      ),
+    ),
+    'logic' => 'and',
+  ),
+  'name' => 'telc-template',
+);
+$display = new panels_display();
+$display->layout = 'onecol';
+$display->layout_settings = array();
+$display->panel_settings = array(
+  'style_settings' => array(
+    'default' => NULL,
+    'middle' => NULL,
+  ),
+);
+$display->cache = array();
+$display->title = '%course:title';
+$display->uuid = 'aec7669e-a2b6-40d6-94d2-b0a7f4254e42';
+$display->storage_type = 'page_manager';
+$display->storage_id = 'page_course_anmeldung__telc-template';
+$display->content = array();
+$display->panels = array();
+$pane = new stdClass();
+$pane->pid = 'new-36577d6b-8e10-43b4-92b2-dc584c5c4764';
+$pane->panel = 'middle';
+$pane->type = 'custom';
+$pane->subtype = 'custom';
+$pane->shown = TRUE;
+$pane->access = array();
+$pane->configuration = array(
+  'admin_title' => '',
+  'title' => '',
+  'body' => '<p><strong>%segment:name: %course:title</strong></p>
+
+<p>%node:body</p>
+
+<p>%node:field_course_date <strong>in</strong> %location:title</p>
+',
+  'format' => 'html',
+  'substitute' => 1,
+);
+$pane->cache = array();
+$pane->style = array(
+  'settings' => NULL,
+);
+$pane->css = array();
+$pane->extras = array();
+$pane->position = 0;
+$pane->locks = array();
+$pane->uuid = '36577d6b-8e10-43b4-92b2-dc584c5c4764';
+$display->content['new-36577d6b-8e10-43b4-92b2-dc584c5c4764'] = $pane;
+$display->panels['middle'][0] = 'new-36577d6b-8e10-43b4-92b2-dc584c5c4764';
+$pane = new stdClass();
+$pane->pid = 'new-7eaf731b-db9f-44aa-954b-0b36c363bcd7';
+$pane->panel = 'middle';
+$pane->type = 'node';
+$pane->subtype = 'node';
+$pane->shown = TRUE;
+$pane->access = array();
+$pane->configuration = array(
+  'nid' => '15686',
+  'links' => 0,
+  'leave_node_title' => 0,
+  'identifier' => '',
+  'build_mode' => 'full',
+  'link_node_title' => 0,
+  'override_title' => 1,
+  'override_title_text' => '',
+  'override_title_heading' => 'h2',
+);
+$pane->cache = array();
+$pane->style = array(
+  'settings' => NULL,
+);
+$pane->css = array();
+$pane->extras = array();
+$pane->position = 1;
+$pane->locks = array();
+$pane->uuid = '7eaf731b-db9f-44aa-954b-0b36c363bcd7';
+$display->content['new-7eaf731b-db9f-44aa-954b-0b36c363bcd7'] = $pane;
+$display->panels['middle'][1] = 'new-7eaf731b-db9f-44aa-954b-0b36c363bcd7';
+$display->hide_title = PANELS_TITLE_FIXED;
+$display->title_pane = 'new-36577d6b-8e10-43b4-92b2-dc584c5c4764';
+$handler->conf['display'] = $display;
+$page->default_handlers[$handler->name] = $handler;
+$handler = new stdClass();
+$handler->disabled = FALSE; /* Edit this to true to make a default handler disabled initially */
+$handler->api_version = 1;
 $handler->name = 'page_course_anmeldung__infoanl-sse-template';
 $handler->task = 'page';
 $handler->subtask = 'course_anmeldung';
 $handler->handler = 'panel_context';
-$handler->weight = -26;
+$handler->weight = 0;
 $handler->conf = array(
   'title' => 'Infoanlässe Template',
   'no_blocks' => 0,
