--- a/all/themes/pixelgarage/less/variable-overrides.less
+++ b/all/themes/pixelgarage/less/variable-overrides.less
@@ -9,15 +9,15 @@
 //
 @pxl-color-hso-main: rgb(204, 51, 51); //#cc3333
 @pxl-color-hso-sec:  rgb(240, 240, 235); //#f0f0eb
-@pxl-color-hso-kv: #8C9D44; // rgb(149, 186, 64);
-@pxl-color-hso-hs: #D09D15; //rgb(232, 116, 49);
-@pxl-color-hso-wm: #7C0B25; //rgb(120, 114, 159);
-@pxl-color-hso-sp: #B2CCD8; //#d82a33; #335592; //rgb(138, 133, 184);
-@pxl-color-hso-wi: #3F5868; //rgb(100, 96, 133);
-@pxl-color-hso-pp: #7B6C65; //rgb(177, 168, 149);
+@pxl-color-hso-kv: #8C9D44; // rgb(140, 157, 68);
+@pxl-color-hso-hs: #D09D15; //rgb(208, 157, 21);
+@pxl-color-hso-wm: #7C0B25; //rgb(124, 11, 37);
+@pxl-color-hso-sp: #B2CCD8; //rgb(178, 204, 216);
+@pxl-color-hso-wi: #3F5868; //rgb(63, 88, 104);
+@pxl-color-hso-pp: #7B6C65; //rgb(123, 108, 101);
 @pxl-color-hso-gray: rgb(235,235,235); // #ebebeb
-@pxl-color-hso-kv-menu: #8C9D44; // rgb(168, 212, 73);
-@pxl-color-hso-hs-menu: #D09D15; // rgb(255, 120, 40);
+@pxl-color-hso-kv-menu: #8C9D44; // rgb(140, 157, 68);
+@pxl-color-hso-hs-menu: #D09D15; // rgb(208, 157, 21);
 
 @pxl-color-bg-button: #ff535d;
 @pxl-color-bg-button-hover: #ff757d;
