--- a/all/themes/pixelgarage/less/header.less
+++ b/all/themes/pixelgarage/less/header.less
@@ -146,6 +146,9 @@ header#navbar {
             }
 
             &.last {
+              .menu-attach-block-drop-link {
+                display: none;
+              }
               .menu-attach-block-wrapper {
                 display: block;
                 padding: 10px 0;
