--- a/all/themes/pixelgarage/less/pxlComponents/node-news.less
+++ b/all/themes/pixelgarage/less/pxlComponents/node-news.less
@@ -75,6 +75,8 @@
 .node.node-news.view-mode-default {
   margin-top: 50px;
   border-top: 2px solid @pxl-border-color;
+  max-width: 800px;
+  margin: 0 auto;
 
   .row {
     div.col-sm-12 {
