--- a/all/themes/pixelgarage/less/pxlComponents/view-call2action.less
+++ b/all/themes/pixelgarage/less/pxlComponents/view-call2action.less
@@ -57,7 +57,7 @@
 
     .views-row {
       display: inline-block;
-      margin-right: 0 -0.15em;
+      margin: 0 -0.08em;
       padding: 0 0 @pxl-gutter-width-teaser;
       width: 50%;
       vertical-align: top;
