--- a/all/themes/pixelgarage/css/style.css
+++ b/all/themes/pixelgarage/css/style.css
@@ -10693,6 +10693,10 @@ body.segment_pp table.lektionplan .color-bg-100 {
 /*
  *  Node page component
  * --------------------------------------------------*/
+.node.node-page {
+  max-width: 800px;
+  margin: 0 auto;
+}
 .node.node-page .row div.col-sm-12 {
   width: 100%;
 }
@@ -10878,6 +10882,8 @@ body.segment_pp table.lektionplan .color-bg-100 {
  *  Node / block webform component
  * --------------------------------------------------*/
 .node-webform {
+  max-width: 800px;
+  margin: 0 auto;
   padding-bottom: 30px;
 }
 .node-webform .row div.col-sm-12 {
