--- a/all/themes/pixelgarage/less/pxlComponents/node-page.less
+++ b/all/themes/pixelgarage/less/pxlComponents/node-page.less
@@ -14,6 +14,9 @@
 // General settings
 // -------------------------
 .node.node-page {
+  max-width: 800px;
+  margin: 0 auto;
+
   .row {
     div.col-sm-12 {
       width: 100%;
