--- a/all/themes/pixelgarage/less/pxlComponents/node-webform.less
+++ b/all/themes/pixelgarage/less/pxlComponents/node-webform.less
@@ -78,6 +78,8 @@
 // Node settings
 // -------------------------
 .node-webform {
+  max-width: 800px;
+  margin: 0 auto;
   padding-bottom: 30px;
 
   .row {
